force-app/main/default/objects/ABHFL_Payment__c/ABHFL_Payment__c.object-meta.xml
<CustomObject>
    <description>Object to record Payments associated with a case</description>
    <label>ABHFL Payment</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>ABHFL Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABHFL Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>