force-app/main/default/objects/ABHFL_Payment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Parent Case for the Payment</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ABHFL Payments</relationshipLabel>
    <relationshipName>ABFL_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>