force-app/main/default/objects/ABHFL_Payment__c/fields/Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Payment__c</fullName>
    <label>Mode of Payment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>RTGS</fullName>
            </value>
            <value>
                <fullName>NEFT</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
            <value>
                <fullName>IMPS</fullName>
            </value>
            <value>
                <fullName>POS-NEFT</fullName>
            </value>
            <value>
                <fullName>POS-UPI</fullName>
            </value>
            <value>
                <fullName>Payment Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>