force-app/main/default/objects/ABHFL_Payment__c/fields/Payment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Payment_Identifier__c</fullName>
    <label>Payment Identifier</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>