force-app/main/default/objects/ABHFL_Payment__c/fields/Realization_Status__c.field-meta.xml
<CustomField>
    <fullName>Realization_Status__c</fullName>
    <label>Realization Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Bounce</fullName>
            </value>
            <value>
                <fullName>Additional Requirement</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>