force-app/main/default/objects/ABHFL_Payment__c/validationRules/Edit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
NOT(Case__r.AmIOwner__c) ,
$Profile.Name = &apos;ABHFL Base Profile&apos;
)</errorConditionFormula>
    <errorMessage>You don&apos;t have permission to edit this record.</errorMessage>
</ValidationRule>