force-app/main/default/objects/ABHFL_Payment__c/validationRules/Validation_for_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Date__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Payment Date shouldn&apos;t be in future.</errorMessage>
</ValidationRule>